# claude-plays-rogue

./: Makefile  README.md  pyproject.toml
src/cpr/: __init__.py  __main__.py  config.py
src/cpr/player/: human.py
src/rogomatic_llm/: __init__.py  __main__.py  config.py  play.py
src/rogomatic_llm/player/: __init__.py  base.py  human.py  llm.py
static/: demo.tape
tests/: __init__.py
tests/player/: test_human.py
